k8s/deploy.yaml
# k3s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-app
  labels:
    app: html-app
    version: "1.0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: html-app
  template:
    metadata:
      labels:
        app: html-app
    spec:
      containers:
      - name: html-app
        image: ghcr.io/saroarshahan/k3s-hub:latest
        ports:
        - containerPort: 80
          name: http
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Mi"    
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
      imagePullSecrets:
      - name: ghcr-secret
