k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-app-service
  labels:
    app: html-app
spec:
  selector:
    app: html-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
